# DirectXMesh

DirectXMesh/: CMakeLists.txt  DirectXMeshP.h  scoped.h
Meshconvert/: Meshconvert.cpp  Meshconvert_Desktop_2015.vcxproj  Meshconvert_Desktop_2015.vcxproj.filters  Meshconvert_Desktop_2017.vcxproj  Meshconvert_Desktop_2017.vcxproj.filters
